# thonny

./: .editorconfig  .gitattributes  .gitignore  .hgignore  .project  .pydevproject  .pylintrc  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  CONTRIBUTORS.md  CREDITS.rst  Henry file  LICENSE.txt  MANIFEST.in  Makefile  PYTHON-LICENSE.txt  Pdf  README.md  README.rst  Raif123  Thonny.lnk  Thonny.sh  VERSION  build.bat  build.sh  check.sh  copy_libs.bat  copy_libs.sh  format-and-check.sh  hinded.txt  launch_thonny.py  license.txt  messages.pot  myp.txt  mypy.ini  project_layout.txt  pyproject.toml  requirements.txt  run_plugin_tests.py  (+19 more)
.github/ISSUE_TEMPLATE/: bug_report.md  custom-issue.md  feature_request.md  other-issue.md
codeium_proto/: buf.gen.yaml  generate_classes.sh
data/: README.txt  circuitpython-devices.json  circuitpython-variants-daplink.json  circuitpython-variants-esptool.json  circuitpython-variants-uf2.json  circuitpython-variants.json  info_uf2_samples.txt  known_packages_circuitpython_pypi.txt  known_packages_cpython_pypi.txt  known_packages_micropython_pypi.txt  microbit-firmware.json  micropython-devices.json  micropython-lib-metadata.json  micropython-variants-daplink.json  micropython-variants-esptool.json  micropython-variants-uf2.json  micropython-variants.json  mp_vs_cp.txt  pypi_summaries_circuitpython.json  pypi_summaries_cpython.json  pypi_summaries_microcircuit.json  pypi_summaries_micropython.json  rpi-pico-firmware.json  update_circuitpython_devices.py  update_circuitpython_variants.py  update_firmware_mapping.py  update_known_packages_circuitpython_pypi.py  update_known_packages_cpython.py  update_known_packages_micropython_pypi.py  update_micropython_devices.py  update_micropython_lib_metadata.py  update_micropython_variants.py  update_pypi_summaries.py  update_variants_common.py
docs/: translate.md
exa/chat_pb/: chat_pb2.py  chat_pb2.pyi
exa/codeium_common_pb/: codeium_common_pb2.py  codeium_common_pb2.pyi
exa/diff_action_pb/: diff_action_pb2.py  diff_action_pb2.pyi
exa/language_server_pb/: language_server_pb2.py  language_server_pb2.pyi  language_server_pb2_grpc.py
installers/cx_freeze/: setup.py
installers/linux/: Thonny.desktop  create_frozen_tarball.sh  create_tarball.sh  install.py  readme.txt
installers/mac/: create_bundle.sh  readme.txt
installers/setuptools/: create_sdist.bat  upload_sdist.bat
installers/windows/: DisableDPIAwareness.bat  DisableDPIAwareness.manifest  EnableDPIAwareness.bat  (+3 more)
licenses/: CERTIFI-LICENCE.txt  DISTRO_LICENSE.txt  ECLIPSE-ICONS-LICENSE.txt  JEDI-LICENSE.txt  PYTHON-LICENSE.txt  _readme.txt
linux/: Thonny.desktop  ThonnyURL.desktop  create_tarball  create_tarball.sh  install.py  thonny-pytemplate.xml  thonny.sh
locale/: messages.po
mac/: com.apple.DownloadAssessment.plist  create_bundle  create_bundle.sh
misc/: Basedpyright-caps.json  Basedpyright-diagnostics.json  ExTextKatse.py  Ruff-diagnostics.json  ThonnyComm.txt  aqua.py  argv_katse.py  basedpyright-langeserver-interceptor.py  blocks_katse.py  can.py  colors.py  debukatse.py  docukatse.py  filedlg.py  format-lsp-flow.py  fullscreen.py  gridkatse.py  intera.py  iterf.py  jedi_problem.py  katse.py  kbd.py  listboxkatse.py  mebu.py  menukatse.py  microbit_problem.py  mmm.py  mp_paste_mode.py  mp_repl_experiment.py  mp_thread_exp.py  notebook_katse.py  punktid.py  pyboard.py  pyright_python_interceptor.py  serial_ports_info.py  serial_test.py  shh_katse.py  sockatse.py  stipple.py  style_katse.py  (+9 more)
packaging/: pip.sh  portable_thonny.ini  readme.txt  requirements-regular-bundle.txt  requirements-xxl-bundle.txt  turtle.cfg
src/: OpenListener.py  about.py  ast_utils.py  backend.py  backlaunch.py  browser.py  code.py  codeview.py  coloring.py  common.py  config.py  launch.py  license.txt  main.py  memory.py  misc_utils.py  shell.py  stack.py  static.py  ttk_simpledialog.py  ui_utils.py  user_logging.py  vm_proxy.py
stuff/: aliasing.py  ascii.txt  ast_test.py  euler1.py  fact.py  for.py  impordid.py  kahest_suurim.py  kuupaev.py  listid1.py  listid2.py  listid3.py  multilevel.py  pere_sissetulek.py  turt.py  utf8.txt
test/: imports_to_test.py  what_to_test.txt
tests/: ast_utils_mark_text_ranges_tests.py  ast_utils_tests.py  imports_to_test.py
thonny/: VERSION  __init__.py  __main__.py  about.py  assistance.py  ast_utils.py  ast_utils_old_range_marker.py  autocomplete.py  backend.py  backend_launcher.py  backend_lite.py  backlaunch.py  base_file_browser.py  browser.py  code.py  codeview.py  coloring.py  common.py  config.py  config_ui.py  custom_notebook.py  defaults.ini  dnd.py  editor_helpers.py  editors.py  exercise.py  exercises.py  exersys.py  export.py  filebrowser.py  find.py  first_run.py  flasher.py  globals.py  gridtable.py  jedi_utils.py  keybord.py  languages.py  launch.py  lsp_proxy.py  (+27 more)
thonnyapp/: setup.py
windows/: build_installer.bat  create_inno_installers.bat  inno_setup.iss
(+2815 files in other folders)
